@@ -145,3 +145,11 @@ int archdep_num_text_columns(void)
 {
     return 80;
 }
+
+int archdep_default_logger(const char *level_string, const char *format,
+                                                                va_list ap)
+{
+    return 0;
+}
+
+
